<resources>
    <string name="app_name">客来</string>
    <string name="assess">评价我们</string>
    <string name="about">关于</string>
    <string name="clean">清除缓存</string>
    <string name="login">登 录</string>
    <string name="password">密码</string>
    <string name="agree">注册登录即表示您同意我们的</string>
    <string name="protocol">用户许可协议</string>
    <string name="loginac">登陆名</string>
    <string name="protocco">用户使用协议</string>
    <string name="ac">登陆名</string>
    <string name="firstpager">首页</string>
    <string name="notCall">未拨打</string>
    <string name="impornt">重点</string>
    <string name="follwup">待跟进</string>
    <string name="nothink">无意愿</string>
    <string name="save">保存</string>
    <string name="pick">提取</string>
    <string name="Notconnected">未接通</string>
    <string name="edit">编辑</string>
    <string name="saves">保存</string>
    <string name="netstatu">当前网络不可用，请检查你的网络设置</string>


    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>
    <string name="noanswer">无人接听</string>
    <string name="breaks">直接挂断</string>
    <string name="close">关机</string>
    <string name="nothinks">无意愿</string>
    <string name="cbreaks">接通后挂断</string>

</resources>
