<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:background="@mipmap/background">




    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:id="@+id/iv_iocn"

        android:src="@mipmap/icon"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_iocn"
        android:layout_centerInParent="true"
        android:textSize="24sp"
        android:textColor="#49617d"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"/>

    <RelativeLayout
        android:id="@+id/rl_ac"
        android:layout_below="@+id/iv_iocn"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:layout_marginTop="75dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@mipmap/lnb"
        >
        <ImageView
            android:id="@+id/iv_phone"
            android:layout_width="18dp"
            android:layout_height="18dp"


          android:src="@mipmap/testicon"
            android:layout_centerVertical="true"

            android:layout_marginLeft="22dp"
            />

        <EditText

            android:id="@+id/tv_loginac"

            android:textCursorDrawable="@null"

            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_toRightOf="@+id/iv_phone"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="40dp"
            android:layout_centerVertical="true"
            android:paddingLeft="5dp"
            android:background="@null"
            android:hint="@string/ac"
            android:maxLength="11"
            android:textColorHint="@color/hint"
            android:textSize="14sp"

            />
    </RelativeLayout>






    <RelativeLayout
        android:id="@+id/rl_logpwd"
        android:layout_below="@+id/rl_ac"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@mipmap/lnb"
        >
        <ImageView
            android:id="@+id/iv_pwd"
            android:layout_width="18dp"
            android:layout_height="18dp"
           android:src="@mipmap/password"
            android:layout_centerVertical="true"
            android:layout_marginLeft="22dp"
            />

        <EditText

            android:id="@+id/tv_logpwd"

            android:textCursorDrawable="@null"

            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_toRightOf="@+id/iv_pwd"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="40dp"
            android:layout_centerVertical="true"
            android:paddingLeft="5dp"
            android:background="@null"
            android:hint="@string/password"
            android:maxLength="11"
            android:textColorHint="@color/hint"
            android:textSize="14sp"

            />
    </RelativeLayout>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/login_shap"
        android:layout_below="@+id/rl_logpwd"
        android:layout_marginTop="25dp"
        android:id="@+id/bt_login"
        android:layout_centerHorizontal="true"
        android:layout_height="40dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:textSize="22dp"
        android:text="@string/login"/>
    </RelativeLayout>
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
   android:layout_centerInParent="true"
    android:layout_marginBottom="10dp"
    android:layout_alignParentBottom="true">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:id="@+id/tv_agree"
       />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/protocol"
       android:textColor="@color/white"
        android:id="@+id/tv_pro"
        android:textSize="13sp"
        android:layout_toRightOf="@+id/tv_agree"/>
</RelativeLayout>
</RelativeLayout>
