<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"

              android:layout_height="wrap_content">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/close"
        android:id="@+id/iv_close"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true"
        />



<TextView
    android:layout_below="@+id/iv_close"
    android:layout_width="match_parent"
    android:layout_height="53dp"
    android:text="添加备注"
    android:gravity="center"
    android:textSize="18sp"
    android:id="@+id/tv_bjhead"
    android:textColor="@color/white"
    android:background="@mipmap/top"/>
<RelativeLayout
    android:layout_below="@+id/tv_bjhead"
    android:layout_width="match_parent"
    android:background="@drawable/detai_shap"
    android:layout_height="wrap_content">
    <EditText

        android:id="@+id/tv_edbj"
      android:layout_marginTop="18dp"
        android:textCursorDrawable="@null"

        android:layout_width="match_parent"
        android:layout_height="200dp"

        android:gravity="top"
          android:background="@null"
        android:singleLine="false"
        android:paddingLeft="4dp"


        android:hint="备注："

        android:textColorHint="@color/hint"
        android:textSize="19sp"

        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tv_edbj"
        android:id="@+id/view"
        android:background="@color/grey_200"></View>


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="40dp"
       android:layout_below="@+id/view"
       android:id="@+id/ll_choos"
       android:layout_marginTop="18dp"
       android:orientation="horizontal">

       <TextView
           android:layout_gravity="center"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:background="@mipmap/tnb"
           android:text="@string/Notconnected"
           android:id="@+id/tv_nc"
           android:gravity="center"
           android:layout_marginLeft="15dp"
           android:textColor="@color/grey_word1"
           android:layout_height="wrap_content"/>

       <TextView
           android:layout_gravity="center"
           android:layout_width="0dp"
           android:layout_weight="1"

           android:background="@mipmap/tnb"
           android:text="@string/impornt"
           android:textColor="@color/grey_word1"
           android:id="@+id/tv_im"
           android:gravity="center"
           android:layout_height="wrap_content"/>
       <TextView
           android:layout_gravity="center"
           android:layout_width="0dp"
           android:layout_weight="1"
android:visibility="gone"
           android:textColor="@color/grey_word1"
           android:background="@mipmap/tnb"
           android:text="@string/follwup"
           android:gravity="center"
           android:id="@+id/tv_gj"

           android:layout_height="wrap_content"/>
       <TextView
           android:layout_gravity="center"
           android:id="@+id/tv_nt"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:gravity="center"
           android:textColor="@color/grey_word1"

           android:background="@mipmap/tnb"
           android:text="@string/nothink"
           android:layout_marginRight="15dp"
           android:layout_height="wrap_content"/>

   </LinearLayout>

    <TextView
        android:layout_below="@+id/ll_choos"
        android:layout_width="212dp"
        android:layout_height="38dp"
        android:id="@+id/tv_save"
        android:layout_centerHorizontal="true"
        android:text="@string/save"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/login_shap"/>

</RelativeLayout>
</RelativeLayout>