<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             
              android:layout_width="match_parent"
              android:layout_height="match_parent">

<LinearLayout
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ll_head"
        android:background="@mipmap/bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:id="@+id/iv_backb"
                android:layout_marginLeft="15dp"
                android:src="@mipmap/back"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:id="@+id/tv_theme"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="备注"/>



        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_id"
                android:textSize="30sp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:text="232323"/>


            <TextView
                android:layout_below="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/detail_phone"

                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:text="1212121212121212"/>
            <TextView
                android:layout_below="@+id/detail_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_margin="8dp"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:layout_centerHorizontal="true"
                android:text="我的睡觉觉阿斯兰的骄傲施蒂利克静安寺"/>
        </RelativeLayout>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:id="@+id/ll_choos"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/cache_shaps"
            android:text="@string/pick"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/cache_shaps"
            android:text="@string/impornt"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:background="@drawable/cache_shaps"
            android:text="@string/nothink"
            android:gravity="center"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:background="@drawable/cache_shaps"
            android:text="@string/follwup"
            android:gravity="center"

            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:background="@drawable/cache_shaps"
            android:text="@string/Notconnected"
            android:layout_marginRight="15dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:background="@color/linecorlor"
        android:layout_marginTop="22dp"
        android:layout_height="1dp"></View>


    <EditText

        android:id="@+id/tv_bjhint"
        android:layout_marginTop="18dp"
        android:textCursorDrawable="@null"
   android:layout_marginLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"

        android:gravity="top"
        android:background="@null"
        android:singleLine="false"
        android:paddingLeft="4dp"


        android:hint="备注："

        android:textColorHint="@color/hint"
        android:textSize="19sp"

        />
    <View
        android:layout_width="match_parent"
        android:background="@color/linecorlor"
        android:layout_marginTop="22dp"
        android:layout_height="1dp"></View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="12dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_xuan"
            android:layout_centerVertical="true"
            android:src="@mipmap/gouxuan_on"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_toRightOf="@+id/iv_xuan"
            android:textColor="@color/drawcorlor"
            android:textSize="19sp"
            android:layout_centerVertical="true"
            android:text="开启保存后连续拨打功能"/>


    </RelativeLayout>
</LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:gravity="center"
        android:background="@color/bule"
        android:layout_height="47dp"/>
</RelativeLayout>