<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/white"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/layout_head" ></include>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/grey"



        ></View>

    <RelativeLayout
        android:id="@+id/rl_clean"
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
               android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:text="@string/assess"
            />
        <ImageView
            android:id="@+id/iv_assess_go"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@mipmap/icon_go"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"    ></View>

    <RelativeLayout
        android:id="@+id/rl_ass"
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:text="@string/about"
            />
        <ImageView
            android:id="@+id/iv_about_go"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@mipmap/icon_go"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/grey"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"    ></View>

    <RelativeLayout
        android:id="@+id/rl_my_wallet"
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/tv_clean"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:text="@string/clean"
            />






        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:layout_toRightOf="@+id/tv_clean"
            android:id="@+id/cache"
            android:text="6M"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/cache"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:text=")"/>


        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/cache_shap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"

                android:text="清除"/>

        </RelativeLayout>


    </RelativeLayout>
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@color/grey">


     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/white"
         android:layout_alignParentBottom="true"
         android:text="退出登录"
         android:textSize="18sp"
         android:gravity="center"
         android:layout_marginBottom="50dp"/>



   </RelativeLayout>




</LinearLayout>